#7 Fixed Dark Mode; Works in both Chrome and Firefox

--- a/public/css/queries.css
+++ b/public/css/queries.css
@@ -37,7 +37,6 @@
         line-height: 24pt;
     }
     .openbtn { display: block; }
-    .pure-form { margin-left: 40px; }
     .footer { margin-bottom: 30px; }
 }
 
@@ -68,6 +67,5 @@
         line-height: 24pt;
     }
     .openbtn { display: block; }
-    .pure-form { margin-left: 40px; }
     .footer { margin-bottom: 20px; }
 }
